--- a/etc/init.rc
+++ b/etc/init.rc
@@ -12,10 +12,7 @@ on init
     symlink /system/etc /etc
 
     mkdir /boot
-    mkdir /recovery
     mkdir /sdcard
-    mkdir /internal_sd
-    mkdir /external_sd
     mkdir /sd-ext
     mkdir /datadata
     mkdir /emmc
@@ -52,7 +49,11 @@ service recovery /sbin/recovery
 service adbd /sbin/adbd recovery
     disabled
 
-# Recovery will start adb once it has checked the keys
+# Always start adbd on userdebug and eng builds
+on property:ro.debuggable=1
+    #write /sys/class/android_usb/android0/enable 1
+    #start adbd
+    setprop service.adb.root 1
 
 # Restart adbd so it can run as root
 on property:service.adb.root=1
